[package]
name = "rplace"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Data analysis library for r/place"
keywords = ["r-place", "reddit", "data-analysis", "canvas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"

[[bin]]
name = "cargo-rplace"
path = "src/main.rs"
