[package]
name = "rplace"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Data analysis library for r/place"
keywords = ["r-place", "reddit", "data-analysis", "canvas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
futures-util = "0.3.28"
indicatif = "0.17.5"
reqwest = { version = "0.11.18", features = ["stream", "gzip"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "cargo-rplace"
path = "src/main.rs"
